<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_resolution">Resolution:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="micro_volts">µV</string>
    <string name="ch1">1</string>
    <string name="ch2">2</string>
    <string name="ch3">3</string>
    <string name="ch4">4</string>
    <string name="ch5">5</string>
    <string name="ch6">6</string>
    <string name="ch7">7</string>
    <string name="ch8">8</string>
    <string-array name="gains">
        <item>0.5</item>
        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>8</item>
        <item>16</item>
        <item>32</item>
        <item>64</item>
    </string-array>
    <string-array name="octaves">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="keys">
        <item>C</item>
        <item>C#</item>
        <item>D</item>
        <item>D#</item>
        <item>E</item>
        <item>F</item>
        <item>F#</item>
        <item>G</item>
        <item>G#</item>
        <item>A</item>
        <item>A#</item>
        <item>B</item>
    </string-array>
    <string name="label_gain">Gain:</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="no_address">No address</string>
    <string name="ch1_label">ch1</string>
    <string name="ch2_label">ch2</string>
    <string name="ch3_label">ch3</string>
    <string name="ch4_label">ch4</string>
    <string name="ch5_label">ch5</string>
    <string name="ch7_label">ch7</string>
    <string name="ch8_label">ch8</string>
    <string name="real_time_plot_label">Real-time plot</string>
    <string name="record_label">Record</string>
    <string name="save_label">Saving EEG session&#8230;</string>
    <string name="ch6_label">ch6</string>
    <string name="YAxis_label">µV</string>
    <string name="XAxis_label">Time (s)</string>
    <string name="traumschreiber_filter_title">Only showing Traumschreiber devices here:</string>
</resources>
